--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -515,6 +515,269 @@ section {
           #about .wrapper .right-wrapper ._yt_er_ol {
             padding: 0 .9375rem; } }
 
+            #about .wrapper {
+              display: flex;
+              flex-direction: row;
+              flex-wrap: nowrap;
+              justify-content: space-between;
+            }
+            
+            #about .wrapper .left-three-wrapper,
+            #about .wrapper .center-three-wrapper,
+            #about .wrapper .right-three-wrapper {
+              display: flex;
+              flex-direction: column;
+              flex-flow: column nowrap;
+              width: calc(33.33%);
+              max-width: calc(33.33%);
+              padding: .9375rem;
+              position: relative;
+            }
+            
+            @media screen and (max-width: 767.98px) {
+              #about .wrapper .left-three-wrapper,
+              #about .wrapper .center-three-wrapper,
+              #about .wrapper .right-three-wrapper {
+                width: calc(100%);
+                max-width: calc(100%);
+              }
+            }
+            
+            #about .wrapper .left-three-wrapper .content,
+            #about .wrapper .center-three-wrapper .content,
+            #about .wrapper .right-three-wrapper .content {
+              display: block;
+              position: relative;
+              padding: .9375rem;
+              margin: 1.25rem 0;
+              transition: all ease .3s;
+            }
+            
+            @media screen and (max-width: 767.98px) {
+              #about .wrapper .left-three-wrapper .content,
+              #about .wrapper .center-three-wrapper .content,
+              #about .wrapper .right-three-wrapper .content {
+                margin: 0;
+              }
+            }
+            
+            #about .wrapper .left-three-wrapper .content .title,
+            #about .wrapper .center-three-wrapper .content .title,
+            #about .wrapper .right-three-wrapper .content .title {
+              display: inline-block;
+              margin: 1.25rem 0;
+              position: relative;
+            }
+            
+            @media screen and (max-width: 767.98px) {
+              #about .wrapper .left-three-wrapper .content .title,
+              #about .wrapper .center-three-wrapper .content .title,
+              #about .wrapper .right-three-wrapper .content .title {
+                margin: 0;
+              }
+            }
+            
+            #about .wrapper .left-three-wrapper .content .title h4,
+            #about .wrapper .center-three-wrapper .content .title h4,
+            #about .wrapper .right-three-wrapper .content .title h4 {
+              color: #fff;
+              font-size: 1rem;
+              display: block;
+              margin: .3125rem 0 3.125rem 0;
+            }
+            
+            @media screen and (max-width: 575.98px) {
+              #about .wrapper .left-three-wrapper .content .title h4,
+              #about .wrapper .center-three-wrapper .content .title h4,
+              #about .wrapper .right-three-wrapper .content .title h4 {
+                margin: 0;
+              }
+            }
+            
+            @media (min-width: 576px) and (max-width: 767.98px) {
+              #about .wrapper .left-three-wrapper .content .title h4,
+              #about .wrapper .center-three-wrapper .content .title h4,
+              #about .wrapper .right-three-wrapper .content .title h4 {
+                margin: .3125rem 0 .625rem 0;
+              }
+            }
+            
+            #about .wrapper .left-three-wrapper .content .title h2,
+            #about .wrapper .center-three-wrapper .content .title h2,
+            #about .wrapper .right-three-wrapper .content .title h2 {
+              display: block;
+              font-size: 2.5rem;
+              color: #fff;
+              text-transform: uppercase;
+              font-weight: 600;
+              line-height: 3.125rem;
+              letter-spacing: .0625rem;
+              margin: .3125rem 0 1.875rem 0;
+            }
+            
+            @media screen and (max-width: 575.98px) {
+              #about .wrapper .left-three-wrapper .content .title h2,
+              #about .wrapper .center-three-wrapper .content .title h2,
+              #about .wrapper .right-three-wrapper .content .title h2 {
+                font-size: 1.5625rem;
+                line-height: 2.1875rem;
+                margin: .625rem 0;
+              }
+            }
+            
+            @media (min-width: 576px) and (max-width: 767.98px) {
+              #about .wrapper .left-three-wrapper .content .title h2,
+              #about .wrapper .center-three-wrapper .content .title h2,
+              #about .wrapper .right-three-wrapper .content .title h2 {
+                font-size: 1.875rem;
+                line-height: 2.5rem;
+                margin-bottom: .625rem;
+              }
+            }
+            
+            @media (min-width: 768px) and (max-width: 991.98px) {
+              #about .wrapper .left-three-wrapper .content .title h2,
+              #about .wrapper .center-three-wrapper .content .title h2,
+              #about .wrapper .right-three-wrapper .content .title h2 {
+                font-size: 2rem;
+                line-height: 2.375rem;
+                margin-bottom: .625rem;
+              }
+            }
+            
+            #about .wrapper .left-three-wrapper .content .title h2 span,
+            #about .wrapper .center-three-wrapper .content .title h2 span,
+            #about .wrapper .right-three-wrapper .content .title h2 span {
+              color: #E31C25;
+            }
+            
+            #about .wrapper .left-three-wrapper .content .title p,
+            #about .wrapper .center-three-wrapper .content .title p,
+            #about .wrapper .right-three-wrapper .content .title p {
+              color: #9e9e9e;
+              font-size: .9375rem;
+              line-height: 1.6875rem;
+              display: inline-block;
+              margin: 1.25rem 0;
+              text-align: justify;
+            }
+            
+            @media screen and (max-width: 575.98px) {
+              #about .wrapper .left-three-wrapper .content .title p,
+              #about .wrapper .center-three-wrapper .content .title p,
+              #about .wrapper .right-three-wrapper .content .title p {
+                font-size: .875rem;
+                margin: .3125rem 0;
+              }
+            }
+            
+            @media (min-width: 576px) and (max-width: 767.98px) {
+              #about .wrapper .left-three-wrapper .content .title p,
+              #about .wrapper .center-three-wrapper .content .title p,
+              #about .wrapper .right-three-wrapper .content .title p {
+                margin: .3125rem 0;
+              }
+            }
+            
+            #about .wrapper .left-three-wrapper .content ._re_uy_iu,
+            #about .wrapper .center-three-wrapper .content ._re_uy_iu,
+            #about .wrapper .right-three-wrapper .content ._re_uy_iu {
+              display: block;
+              margin: 1.25rem 0;
+              width: 100%;
+              font-size: 1rem;
+              color: #9e9e9e;
+            }
+            
+            @media screen and (max-width: 575.98px) {
+              #about .wrapper .left-three-wrapper .content ._re_uy_iu,
+              #about .wrapper .center-three-wrapper .content ._re_uy_iu,
+              #about .wrapper .right-three-wrapper .content ._re_uy_iu {
+                margin: 0;
+                font-size: 1rem;
+                color: #9e9e9e;
+              }
+            }
+            
+            @media (min-width: 576px) and (max-width: 767.98px) {
+              #about .wrapper .left-three-wrapper .content ._re_uy_iu,
+              #about .wrapper .center-three-wrapper .content ._re_uy_iu,
+              #about .wrapper .right-three-wrapper .content ._re_uy_iu {
+                margin: .625rem 0;
+                font-size: 1rem;
+                color: #ffffff;
+              }
+            }
+            #about .wrapper .left-three-wrapper .content ._re_uy_iu ul,
+            #about .wrapper .center-three-wrapper .content ._re_uy_iu ul,
+            #about .wrapper .right-three-wrapper .content ._re_uy_iu ul {
+              list-style-type: disc;
+              padding-left: 20px;
+              color: #ffffff; /* Adjust color as needed */
+              font-size: 1rem; /* Adjust font size as needed */
+              margin: 0; /* Adjust margin as needed */
+            }
+
+            #about .wrapper .left-three-wrapper .content ._re_uy_iu span,
+            #about .wrapper .center-three-wrapper .content ._re_uy_iu span,
+            #about .wrapper .right-three-wrapper .content ._re_uy_iu span {
+              list-style-type: disc;
+              color: #ff0000; /* Adjust color as needed */
+              font-size: 1rem; /* Adjust font size as needed */
+              margin: 0; /* Adjust margin as needed */
+              font-weight: bold; /* Make text bold */
+            }
+
+            #about .wrapper .left-three-wrapper .content ._re_uy_iu ul li,
+            #about .wrapper .center-three-wrapper .content ._re_uy_iu ul li,
+            #about .wrapper .right-three-wrapper .content ._re_uy_iu ul li {
+              list-style-type: disc;
+              margin: 0.5rem 0; /* Adjust margin between list items as needed */
+              line-height: 1.5rem; /* Adjust line height as needed */
+              color: #ffffff
+            }
+
+            #about .wrapper .left-three-wrapper .content ._re_uy_iu ul li::marker,
+            #about .wrapper .center-three-wrapper .content ._re_uy_iu ul li::marker,
+            #about .wrapper .right-three-wrapper .content ._re_uy_iu ul li::marker {
+              color: white; /* Change bullet color to white */
+            }
+            
+            #about .wrapper .left-three-wrapper .content ._re_uy_iu ._ol_ew_xs,
+            #about .wrapper .center-three-wrapper .content ._ol_ew_xs,
+            #about .wrapper .right-three-wrapper .content ._ol_ew_xs {
+              display: flex;
+              flex: 1 1 100%;
+              align-items: center;
+              justify-content: space-between;
+            }
+            
+            #about .wrapper .left-three-wrapper .content ._re_uy_iu ._ol_ew_xs span,
+            #about .wrapper .center-three-wrapper .content ._re_uy_iu ._ol_ew_xs span,
+            #about .wrapper .right-three-wrapper .content ._re_uy_iu ._ol_ew_xs span {
+              font-size: 1rem;
+              color: #9e9e9e;
+              margin: .3125rem 0 .625rem 0;
+            }
+            
+            #about .wrapper .left-three-wrapper .content ._re_uy_iu .progress,
+            #about .wrapper .center-three-wrapper .content ._re_uy_iu .progress,
+            #about .wrapper .right-three-wrapper .content ._re_uy_iu .progress {
+              height: .4375rem;
+              background: #fff;
+              position: relative;
+              margin-bottom: 1.875rem;
+            }
+            
+            #about .wrapper .left-three-wrapper .content ._re_uy_iu .progress .my-bars,
+            #about .wrapper .center-three-wrapper .content ._re_uy_iu .progress .my-bars,
+            #about .wrapper .right-three-wrapper .content ._re_uy_iu .progress .my-bars {
+              background: #E31C25;
+              max-width: 100%;
+              width: 100%;
+            }
+            
+
 #resume {
   background: url(../images/background/slide-02.jpg) no-repeat center;
   background-size: cover;
