--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -508,9 +508,9 @@ section {
         height: 100%;
         justify-content: center;
         align-items: center;
-        padding: .9375rem;
-        padding-left: 6.25rem;
-        padding-right: .625rem; }
+        padding: 0rem;
+        padding-left: 0rem;
+        padding-right: 0rem; }
         @media screen and (max-width: 991.98px) {
           #about .wrapper .right-wrapper ._yt_er_ol {
             padding: 0 .9375rem; } }
@@ -741,6 +741,16 @@ section {
             #about .wrapper .center-three-wrapper .content ._re_uy_iu ul li::marker,
             #about .wrapper .right-three-wrapper .content ._re_uy_iu ul li::marker {
               color: white; /* Change bullet color to white */
+            }
+
+            #about .wrapper .left-three-wrapper .content ._re_uy_iu ul li span,
+            #about .wrapper .center-three-wrapper .content ._re_uy_iu ul li span,
+            #about .wrapper .right-three-wrapper .content ._re_uy_iu ul li span {
+              list-style-type: disc;
+              color: #9e9e9e; /* Adjust color as needed */
+              font-size: 1rem; /* Adjust font size as needed */
+              margin: 0; /* Adjust margin as needed */
+              font-weight: lighter;
             }
             
             #about .wrapper .left-three-wrapper .content ._re_uy_iu ._ol_ew_xs,
