--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,7 +180,7 @@ section {
             color: #E31C25; }
 
 #home {
-  background: url(../images/banner/banner-2.jpg) no-repeat center;
+  background: url(../images/APAM2022/APAM2022_3_1.jpg) no-repeat center;
   background-size: cover; }
   #home::before {
     position: absolute;
