--- a/assets/font/flaticon.css
+++ b/assets/font/flaticon.css
@@ -38,3 +38,4 @@
 .flaticon-left-arrow-line-symbol:before { content: "\f108"; }
 .flaticon-menu:before { content: "\f105"; }
 .flaticon-cancel:before { content: "\f109"; }
+.flaticon-github:before { content: "\f10a"; }
